--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.17.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "i18next": "^25.8.10",
     "lucide-react": "^0.563.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
