--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@astrojs/react": "4.4.2",
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@supabase/supabase-js": "^2.97.0",
     "astro": "^5.17.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
